--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Copy this file to .env.development or .env.production and replace the placeholder with your actual API key.
 
-VITE_API_KEY=4b48b85a
-VITE_API_URL=http://www.omdbapi.com/
+VITE_API_KEY=your_api_key_here
+VITE_API_URL=your_api_url_here
